“コミットの内容”first_commit

--- a/app/views/top/index.html.erb
+++ b/app/views/top/index.html.erb
@@ -1,3 +1,7 @@
+<section class="main-header">
+  <p class="flash"><%= notice %><%= alert %></p>
+  <img src="<%= asset_path "achieve.png" %>">
+</section>
 <h1>Top#index</h1>
 <p>Find me in app/views/top/index.html.erb</p>
 <p><%= notice %></p>
