--- a/app/assets/stylesheets/top.scss
+++ b/app/assets/stylesheets/top.scss
@@ -2,6 +2,11 @@
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
+.flash {
+  color: white;
+  padding-top: 10px;
+}
+
 header {
   width: 100%;
   background-color: #2c3e50;
