--- a/app/views/devise/passwords/new.html.erb
+++ b/app/views/devise/passwords/new.html.erb
@@ -1,21 +1,16 @@
 <div class="container">
-  <div class="wrapper col-md-8 col-md-offset-2 col-sm-10">
+  <div class="wrapper col-md-4 col-md-offset-4 col-sm-10">
+    <h2>パスワード再設定</h2>
 
-<h2>Forgot your password?</h2>
-
-<%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :post }) do |f| %>
-  <%= devise_error_messages! %>
-  <%= f.hidden_field :reset_password_token %>
+    <%= form_for(resource, as: resource_name, url: user_password_path(resource_name), html: { method: :post }) do |f| %>
+      <%= devise_error_messages! %>
 
       <div class="field">
-        <%= f.password_field :password, autofocus: true, autocomplete: "off", class: "form-control", placeholder: "パスワード" %>
-      </div>
-      <div class="field">
-        <%= f.password_field :password_confirmation, autocomplete: "off", class: "form-control", placeholder: "パスワード（確認）" %>
+        <%= f.email_field :email, autofocus: true, class: "form-control", placeholder: "メールアドレス" %>
       </div>
 
       <div class="actions">
-        <%= f.submit "パスワードを変更する", class: "btn btn-primary btn-block"  %>
+        <%= f.submit "再設定メールを送信する", class: "btn btn-primary btn-block"  %>
       </div>
     <% end %>
 
