--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -3,7 +3,7 @@
 
 <h2>Edit <%= resource_name.to_s.humanize %></h2>
 
-<%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
+  <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
   <%= f.error_messages! %>
 
   <div class="field">
@@ -22,30 +22,26 @@
   <% end %>
 
   <div class="field">
-    <%= f.password_field :password, autocomplete: "off", class: "form-control", placeholder: "パスワード" %>
-    <% if @minimum_password_length %>
-      <br />
-      <em><%= @minimum_password_length %> characters minimum</em>
-    <% end %>
+    <%= f.label :password %> <i>(leave blank if you don't want to change it)</i><br />
+    <%= f.password_field :password, autocomplete: "off", class: "form-control" %>
+  </div>
 
-    <div class="field">
-      <%= f.label :現在のパスワード %><br />
-      <%= f.password_field :current_password, autocomplete: "off", class: "form-control" %>
-    </div>
+  <div class="field">
+    <%= f.label :password_confirmation %><br />
+    <%= f.password_field :password_confirmation, autocomplete: "off", class: "form-control" %>
+  </div>
 
-  <% end %>
+  <div class="field">
+    <%= f.label :現在のパスワード %><br />
+    <%= f.password_field :current_password, autocomplete: "off", class: "form-control" %>
+  </div>
 
-    <div class="field">
-      <%= profile_img(@user) if profile_img(@user) %>
-      <%= f.file_field :avatar %>
-      <%= f.hidden_field :avatar_cache %>
-    </div>
+<% end %>
 
-    <div class="actions">
-      <%= f.submit "更新", class: "btn btn-primary btn-block" %>
-    </div>
-  <% end %>
-
+  <div class="field">
+    <%= profile_img(@user) if profile_img(@user) %>
+    <%= f.file_field :avatar %>
+    <%= f.hidden_field :avatar_cache %>
   </div>
 
   <div class="field">
@@ -59,7 +55,6 @@
   <div class="actions">
     <%= f.submit "Update", class: "btn btn-primary btn-block" %>
   </div>
-<% end %>
 
 <h3>Cancel my account</h3>
 
@@ -68,3 +63,4 @@
 <%= link_to "Back", :back %>
 </div>
 </div>
+<% end %>
