--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,14 +1,25 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <script src="https://js.pusher.com/3.2/pusher.min.js"></script>
   <title>Achieve</title>
   <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
   <%= csrf_meta_tags %>
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <script>
+    var pusher = new Pusher('<%= ENV["PUSHER_KEY"] %>',{
+      encrypted: true
+    });
+
+    var channel = pusher.subscribe('test_channel');
+    channel.bind('comment_created', function(data) {
+      alert(data.message);
+    });
+  </script>
 </head>
 <body>
-  
+
   <header>
 <nav class="navbar navbar-default">
   <div class="container-fluid">
@@ -30,6 +41,7 @@
             <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
             <ul class="dropdown-menu">
               <li><%= link_to "ブログ", blogs_path %></li>
+              <li><%= link_to "メッセージ", conversations_path %></li>
             </ul>
           </li>
           <% if user_signed_in? %>
