--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -42,6 +42,7 @@
             <ul class="dropdown-menu">
               <li><%= link_to "ブログ", blogs_path %></li>
               <li><%= link_to "メッセージ", conversations_path %></li>
+              <li><%= link_to "ユーザー一覧", users_path %></li>
             </ul>
           </li>
           <% if user_signed_in? %>
