--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,16 +7,24 @@
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
   <%= csrf_meta_tags %>
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <% if user_signed_in? %>
   <script>
     var pusher = new Pusher('<%= ENV["PUSHER_KEY"] %>',{
       encrypted: true
     });
 
-    var channel = pusher.subscribe('test_channel');
+    var channel = pusher.subscribe("user_<%= current_user.id %>_channel");
     channel.bind('comment_created', function(data) {
       alert(data.message);
     });
+    channel.bind('notification_created', function(data) {
+        $('#unread_count').html(data.unread_counts);
+      });
   </script>
+  <% end %>
+  <%= link_to notifications_index_path do %>
+    <i class="fa fa-bell fa-1x"><span id="unread_count"><%= @notifications_count %></span></i>
+  <% end %>
 </head>
 <body>
 
